experiments/sweeps/reward_models/logs/30045_0.log
hi
Tue 21 Mar 21:57:18 GMT 2023
compute-permanent-node-746
uid=10025(asa_cooper_stickland) gid=10012(owain_evans) groups=10012(owain_evans)
/data/asa_cooper_stickland/situational-awareness
doing it in one go
1
  File "/data/asa_cooper_stickland/situational-awareness/scripts/t5/train.py", line 44
    super().forward(dataloader, description, prediction_loss_only, ignore keys, metric_key_prefix)
                                                                          ^
SyntaxError: invalid syntax
